Update meta tags

--- a/layout.html
+++ b/layout.html
@@ -12,8 +12,8 @@
   <meta property="og:description" content="{{DESCRIPTION}}" />
   <meta name="author" content="Divan Visagie" />
   <link href='/favicon.ico' rel='icon' type='image/x-icon' />
-  <meta property="og:image" content="img/avatar.jpeg" />
-  <meta name="twitter:image" content="img/avatar.jpeg" />
+  <meta property="og:image" content="{{CARD_IMAGE}}" />
+  <meta name="twitter:image" content="{{CARD_IMAGE}}" />
   <meta name="twitter:card" content="summary" />
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
