--- a/layout.html
+++ b/layout.html
@@ -40,9 +40,20 @@
 
 <body>
   <nav>
-    <h1>
-      <a href="/">Divan Visagie</a>
-    </h1>
+    <div>
+      <h1>
+        <a href="/">Divan Visagie</a>
+      </h1>
+
+      <div class="links">
+        <h2>
+          <a href="/">Posts</a>
+        </h2>
+        <h2>
+          <a href="/about">About</a>
+        </h2>
+      </div>
+    </div>
 
   </nav>
 
