--- a/layout.html
+++ b/layout.html
@@ -62,7 +62,7 @@
   </div>
 
   <footer>
-    Divan Visagie • 2019
+    Divan Visagie • 2019 • <a href="mailto:me@dvisagie.com">me@dvisagie.com</a>
   </footer>
 
 </body>
